--- a/globals.css
+++ b/globals.css
@@ -80,9 +80,9 @@
     .no-scrollbar::-webkit-scrollbar {
         display: none;
     }
-
     /* Hide scrollbar for IE, Edge and Firefox */
     .no-scrollbar {
+        -webkit-overflow-scrolling:touch;
         -ms-overflow-style: none;
         /* IE and Edge */
         scrollbar-width: none;
